--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "html-react-parser": "^5.2.10",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.546.0",
-    "next": "15.5.5",
+    "next": "^16.0.10",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.6.0",
